created test and files for environment

--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -25,8 +25,8 @@ xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 # Path to directory in which BPMN diagrams are stored
 diagramsFolder=src/test/resources/diagrams/
 # Script to create the directory for a new process
-script_createDirMeta=src/test/resources/scripts/script_createDirMeta.sh
-script_createDirUserHome=src/test/resources/scripts/script_createDirUserHome.sh
+script_createDirMeta=src/test/resources/scripts/script_createDirMeta.bat
+script_createDirUserHome=src/test/resources/scripts/script_createDirUserHome.bat
 # Script to create a symbolic link in the user home directory and set
 # permissions for the user
 script_createSymLink=src/test/resources/scripts/script_createSymLink.sh
@@ -45,3 +45,5 @@ KonfigurationVerzeichnis=src/test/resources/
 dir_Users=src/test/resources/
 
 longParameter=2
+
+copyData.onExport=/@GoobiIdentifier \= $process.id;
