optimized test setUp and testDown

--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -12,7 +12,7 @@
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
 MetadatenVerzeichnis=src/test/resources/
-RegelsaetzeVerzeichnis=src/test/resources/
+RegelsaetzeVerzeichnis=src/test/resources/rulesets/
 # Absolute path to the directory that XSLT files are stored in which are used
 # to transform the "XML log" (as visible from the XML button in the processes
 # list) to a downloadable PDF docket which can be enclosed with the physical
@@ -25,8 +25,8 @@ xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 # Path to directory in which BPMN diagrams are stored
 diagramsFolder=src/test/resources/diagrams/
 # Script to create the directory for a new process
-script_createDirMeta=src/test/resources/scripts/script_createDirMeta.bat
-script_createDirUserHome=src/test/resources/scripts/script_createDirUserHome.bat
+script_createDirMeta=src/test/resources/scripts/script_createDirMeta.sh
+script_createDirUserHome=src/test/resources/scripts/script_createDirUserHome.sh
 # Script to create a symbolic link in the user home directory and set
 # permissions for the user
 script_createSymLink=src/test/resources/scripts/script_createSymLink.sh
@@ -42,7 +42,7 @@ elasticsearch.port=9205
 elasticsearch.index=testindex
 elasticsearch.useAuthentication=false
 KonfigurationVerzeichnis=src/test/resources/
-dir_Users=src/test/resources/
+dir_Users=src/test/resources/userdata/
 
 longParameter=2
 
