Change path to scripts and give them execution permissions

--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -97,14 +97,14 @@ useOrigFolder=true
 # of your Kitodo installation.
 # You will have to set execute permission before using those script files.
 # Script to create the user's home directory when adding a new user
-script_createDirUserHome=../../../resources/scripts/script_createDirUserHome.sh
+script_createDirUserHome=../../../../src/test/resources/scripts/script_createDirUserHome.sh
 # Script to create the directory for a new process
-script_createDirMeta=../../../resources/scripts/script_createDirMeta.sh
+script_createDirMeta=../../../../src/test/resources/scripts/script_createDirMeta.sh
 # Script to create a symbolic link in the user home direcory and set
 # permissions for the user
-script_createSymLink=../../../resources/scripts/script_createSymLink.sh
+script_createSymLink=../../../../src/test/resources/scripts/script_createSymLink.sh
 # Script to remove the symbolic link from the user home directory
-script_deleteSymLink=../../../resources/scripts/script_deleteSymLink.sh
+script_deleteSymLink=../../../../src/test/resources/scripts/script_deleteSymLink.sh
 # -----------------------------------
 # Images
 # -----------------------------------
