Make module configurable

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -623,3 +623,30 @@ elasticsearch.batch=1000
 elasticsearch.useAuthentication=true
 elasticsearch.user=kitodo
 elasticsearch.password=kitodo
+
+# =============================================================================
+#      CONFIGURATION OF PLUG-INS
+# =============================================================================
+
+# -----------------------------------
+# ImageManagementModule
+# -----------------------------------
+
+# If ImageMagick is not on the PATH, or the convert command is hidden by
+# another convert in C:\Windows\System32\, which is earlier on the PATH,
+# you can manually set the ImageMagick search path here. (This is mainly a
+# problem in Windows environments.)
+
+#ImageManagementModule.searchPath=C:\\Program Files\\ImageMagick-7.0.7-Q16
+
+# If the ImageManagementModule needs to temporarily write files, you can set
+# the directory to use here:
+
+#ImageManagementModule.tmpDir=/tmp/
+
+# The ImageManagementModule.param.* section can be used to pass arbitrary
+# parameters to ImageMagick. You can set limits here. For a description, see:
+# https://www.imagemagick.org/script/command-line-options.php?#limit
+
+#ImageManagementModule.param.limit.map=40MB
+#ImageManagementModule.param.limit.memory=40MB
