Use Apache Commons Exec to run the convert command

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -650,3 +650,7 @@ elasticsearch.password=kitodo
 
 #ImageManagementModule.param.limit.map=40MB
 #ImageManagementModule.param.limit.memory=40MB
+
+# Timeout for a singular ImageMagick operation in seconds. Defaults to 2 hours.
+
+#ImageManagementModule.timeoutSec=7200
