--- a/Kitodo-ImageManagementModule/pom.xml
+++ b/Kitodo-ImageManagementModule/pom.xml
@@ -37,9 +37,14 @@
             <version>3.7</version>
         </dependency>
         <dependency>
-            <groupId>org.im4java</groupId>
-            <artifactId>im4java</artifactId>
-            <version>1.4.0</version>
+             <groupId>org.im4java</groupId>
+             <artifactId>im4java</artifactId>
+             <version>1.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-exec</artifactId>
+            <version>1.3</version>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
