Provide to run ImageMagick on a remote host using SSH

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -624,6 +624,7 @@ elasticsearch.useAuthentication=true
 elasticsearch.user=kitodo
 elasticsearch.password=kitodo
 
+
 # =============================================================================
 #      CONFIGURATION OF PLUG-INS
 # =============================================================================
@@ -654,3 +655,9 @@ elasticsearch.password=kitodo
 # Timeout for a singular ImageMagick operation in seconds. Defaults to 2 hours.
 
 #ImageManagementModule.timeoutSec=7200
+
+# ImageMagick can be executed remotely using SSH. You can list several hosts
+# here, separated by comma. Key-based authentication must be properly set up.
+# File system paths must be (mounted) equally on the remote machine(s).
+
+#ImageManagementModule.sshHosts=user@rhost1.kitodo.org,user@rhost2.kitodo.org
