--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -45,7 +45,7 @@ xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 # The servlet container must have write permission to that directory.
 MetadatenVerzeichnis=../../../resources/metadata/
 # Path to directory in which BPMN diagrams are stored
-diagramsFolder=../../../resources/diagrams/
+diagramsFolder=../../../../src/test/resources/diagrams/
 # Absolute path to the base directory of the users' home directories,
 # terminated by a directory separator ("/").
 # If a user accepts a task to work on which
