Consolidate kitodo_config.properties with Parameters class

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -35,10 +35,6 @@ RegelsaetzeVerzeichnis=/usr/local/kitodo/rulesets/
 # The path must be terminated by a directory separator ("/").
 xsltFolder=/usr/local/kitodo/xslt/
 
-# Filename of the XSLT file for transforming old metadata files which need to
-# be in the xslt folder above
-xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
-
 # Absolute path to the directory that process directories will be created in,
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
@@ -59,6 +55,19 @@ tempfolder=/usr/local/kitodo/temp/
 
 # Path to directory in which BPMN diagrams are stored
 diagramsFolder=/usr/local/kitodo/diagrams/
+
+# Module configuration
+moduleFolder=/usr/local/kitodo/modules/
+
+# Absolute path to the plugins directory,
+# terminated by a directory separator ("/").
+# The plugins directory must contain a subfolder for each plugin type, which
+# must be named "command", "import", "opac", "step" and "validation", resp.
+# In each folder .jar files containing plugin implementations can be placed.
+pluginFolder=/usr/local/kitodo/plugins/
+
+# Falls Dateien zum Debuggen / Tracen geschrieben werden sollen, hier ein Verzeichnis angeben
+debugFolder=/usr/local/kitodo/debug/
 
 
 # -----------------------------------
@@ -131,6 +140,15 @@ script_deleteSymLink=/usr/local/kitodo/scripts/script_deleteSymLink.sh
 
 
 # -----------------------------------
+# Runnotes
+# -----------------------------------
+
+# Filename of the XSLT file for transforming old metadata files which need to
+# be in the xslt folder above
+xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
+
+
+# -----------------------------------
 # Images
 # -----------------------------------
 
@@ -144,6 +162,8 @@ ImagePrefix=\\d{8}
 # - alphanumeric: 1 is greater then 002, compares character by character of
 #       image names, all characters are supported
 ImageSorting=number
+
+doneDirectoryName=fertig/
 
 
 # =============================================================================
@@ -190,6 +210,8 @@ withUserStepDoneSearch=false
 
 # page the user will be directed to continue
 err_linkToPage=../pages/statischTechnischerHintergrund.jsf
+
+
 # =============================================================================
 #      METADATA PROCESSING
 # =============================================================================
@@ -210,6 +232,10 @@ catalogue.timeout=1800000
 # -----------------------------------
 # Metadata editor behaviour
 # -----------------------------------
+
+# locking time in milliseconds
+MetsEditorLockingTime=180000
+
 # use special image folder for METS editor if exists (define suffix here)
 MetsEditorDefaultSuffix=jpeg
 
@@ -364,6 +390,10 @@ validateIdentifierRegex=[\\w\\|-]
 # Mass process generation
 # -----------------------------------
 
+massImportAllowed=true
+
+MassImportUniqueTitle=true
+
 # Colours used to represent the issues in the calendar editor
 issue.colours=#CC0000;#0000AA;#33FF00;#FF9900;#5555FF;#006600;#AAAAFF;#000055;#0000FF;#FFFF00;#000000
 
@@ -386,7 +416,7 @@ batches.logChangesToWikiField=false
 
 
 # -----------------------------------
-# GoobiContentServer for pdf generation
+# content server for PDF generation
 # -----------------------------------
 
 pdfAsDownload=true
@@ -437,12 +467,6 @@ kitodoContentServerTimeOut=30000
 # these values as restrictive as possible.
 #taskManager.keepThreads.successful.minutes=20
 
-# Sets whether or not to show the task manager entry in the navigation sidebar.
-# Defaults to true. Setting this property doesn't have any influence on the
-# operativeness of the task manager.
-# Hint: This is a replacement for the former property "show_taskmanager"
-#taskManager.showInSidebar=true
-
 # Sets whether or not to show an option to "add a sample task" in the task
 # manager. This is---if for anything at all---useful for debugging or
 # demonstration purposes only. Defaults to false.
@@ -459,7 +483,10 @@ kitodoContentServerTimeOut=30000
 asynchronousAutomaticExport=true
 
 automaticExportWithImages=true
+
 automaticExportWithOcr=true
+
+ExportValidateImages=true
 
 # if this parameter is missing or 'false' the old export mechanism is used,
 # otherwise there is no timelimit for export
@@ -475,6 +502,15 @@ exportWithoutTimeLimit=true
 
 # Logins ueber LDAP verwenden
 ldap_use=false
+
+ldap_AttributeToTest=
+
+ldap_ValueOfAttribute=
+
+useLocalDirectory=true
+
+ldap_useTLS=false
+
 
 # -----------------------------------
 # Authority control configuration
@@ -503,21 +539,8 @@ authority.default=http\://d-nb.info/gnd/
 
 
 # =============================================================================
-#      STATISTICS
+#      INTERACTIVE ERROR MANAGEMENT
 # =============================================================================
-
-# time in milliseconds, when to start automatic storage calculation each day
-# if no automatic storage calculation should be started, set to -1 here
-# sample: 0 means midnight
-storageCalculationSchedule=-1
-
-
-# =============================================================================
-#      DEVELOPER TOOLS
-# =============================================================================
-# -----------------------------------
-# interactive error management
-# -----------------------------------
 
 # use this to turn this feature on or off
 err_userHandling=true
@@ -531,24 +554,9 @@ err_emailEnabled=false
 err_emailAddress1=
 
 
-# -----------------------------------
-# Debug folder
-# -----------------------------------
-
-# Falls Dateien zum Debuggen / Tracen geschrieben werden sollen, hier ein Verzeichnis angeben
-debugFolder=/usr/local/kitodo/debug/
-
-
 # =============================================================================
 #      FUNCTIONAL EXTENSIONS
 # =============================================================================
-# -----------------------------------
-# Module configuration
-# -----------------------------------
-
-moduleFolder=/usr/local/kitodo/modules/
-
-
 # -----------------------------------
 # OCR service access
 # -----------------------------------
@@ -558,22 +566,6 @@ showOcrButton=false
 
 # Base path to OCR, without parameters
 ocrUrl=
-
-
-# -----------------------------------
-# Plug-in interface
-# -----------------------------------
-
-# Absolute path to the plugins directory,
-# terminated by a directory separator ("/").
-# The plugins directory must contain a subfolder for each plugin type, which
-# must be named "command", "import", "opac", "step" and "validation", resp.
-# In each folder .jar files containing plugin implementations can be placed.
-pluginFolder=/usr/local/kitodo/plugins/
-
-massImportAllowed=true
-
-useWebApi=true
 
 
 # -----------------------------------
