--- a/Kitodo-Command/pom.xml
+++ b/Kitodo-Command/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.6</version>
+            <version>${commons-lang3.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
