--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <commons-io.version>2.6</commons-io.version>
         <commons-lang3.version>3.7</commons-lang3.version>
         <hibernate.version>5.2.17.Final</hibernate.version>
+        <jaxb2-basics-runtime.version>1.11.1</jaxb2-basics-runtime.version>
         <jaxen.version>1.1.6</jaxen.version>
         <jersey.version>1.19.3</jersey.version>
         <joda-time.version>2.10</joda-time.version>
