--- a/Kitodo/src/main/resources/c3p0.properties
+++ b/Kitodo/src/main/resources/c3p0.properties
@@ -7,6 +7,14 @@
 #
 # For the full copyright and license information, please read the
 # GPL3-License.txt file that was distributed with this source code.
+
+# This configuration is not direct used inside the application but will
+# be used on usage. This both mentioned properties are for connection
+# testing and is used for unstable or bad programmed connections from
+# application to database.
+#
+# Link: https://www.mchange.com/projects/c3p0/#configuring_connection_testing
+
 # c3p0.properties
 c3p0.testConnectionOnCheckout=false
 c3p0.preferredTestQuery=SELECT 1;
