--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -488,6 +488,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>se.jiderhamn.classloader-leak-prevention</groupId>
+            <artifactId>classloader-leak-prevention-servlet3</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
             <groupId>xmlbeans</groupId>
             <artifactId>xbean_xpath</artifactId>
             <version>2.4.0</version>
