--- a/Kitodo-DataAccess/pom.xml
+++ b/Kitodo-DataAccess/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
-            <version>1.4-atlassian-1</version>
+            <version>${hamcrest-library.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
