--- a/Kitodo-ImageManagementModule/pom.xml
+++ b/Kitodo-ImageManagementModule/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
              <groupId>org.im4java</groupId>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
-            <version>1.4-atlassian-1</version>
+            <version>${hamcrest-library.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
