--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <commons-httpclient.version>3.1</commons-httpclient.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-lang3.version>3.7</commons-lang3.version>
+        <hamcrest-library.version>1.4-atlassian-1</hamcrest-library.version>
         <hibernate.version>5.2.17.Final</hibernate.version>
         <jaxen.version>1.1.6</jaxen.version>
         <jersey.version>1.19.3</jersey.version>
