Add tests for adding docket and ruleset

--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -30,13 +30,13 @@
 #KonfigurationVerzeichnis=C:/dev/local/config/
 # Absolute path to the directory that the rule set definition files will be
 # read from. It must be terminated by a directory separator ("/").
-RegelsaetzeVerzeichnis=../../../resources/rulesets/
+RegelsaetzeVerzeichnis=../../../../src/test/resources/rulesets/
 # Absolute path to the directory that XSLT files are stored in which are used
 # to transform the "XML log" (as visible from the XML button in the processes
 # list) to a downloadable PDF docket which can be enclosed with the physical
 # binding units to digitise.
 # The path must be terminated by a directory separator ("/").
-xsltFolder=../../../resourcess/xslt/
+xsltFolder=../../../../src/test/resources/xslt/
 # Filename of the XSLT file for transforming old metadata files which need to
 # be in the xslt folder above
 xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
