--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -661,3 +661,13 @@ elasticsearch.password=kitodo
 # File system paths must be (mounted) equally on the remote machine(s).
 
 #ImageManagementModule.sshHosts=user@rhost1.kitodo.org,user@rhost2.kitodo.org
+
+
+# -----------------------------------
+# LongTimePreservationValidationModule
+# -----------------------------------
+
+# Jhove requires to read its configuration file from disk. You have to provide
+# the full path to the file:
+
+#LongTimePreservationValidationModule.jhoveConf=/full/path/to/jhove.conf
