--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -54,6 +54,11 @@
             <version>3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
+            <version>62.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
             <version>2.1.5</version>
