Add selenium test for create process from template

--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -27,7 +27,7 @@
 #       You may want to decide to point this path to the directory where
 #       the servlet container will extract the configuration files to (like
 #       webapps/kitodo/WEB-INF/classes) in order to make sure they are found.
-#KonfigurationVerzeichnis=C:/dev/local/config/
+KonfigurationVerzeichnis=../../../../src/test/resources/
 # Absolute path to the directory that the rule set definition files will be
 # read from. It must be terminated by a directory separator ("/").
 RegelsaetzeVerzeichnis=../../../../src/test/resources/rulesets/
@@ -43,7 +43,7 @@ xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 # Absolute path to the directory that process directories will be created in,
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
-MetadatenVerzeichnis=../../../resources/metadata/
+MetadatenVerzeichnis=../../../../src/test/resources/metadata/
 # Path to directory in which BPMN diagrams are stored
 diagramsFolder=../../../../src/test/resources/diagrams/
 # Absolute path to the base directory of the users' home directories,
@@ -53,7 +53,7 @@ diagramsFolder=../../../../src/test/resources/diagrams/
 # a symbolic link to the process directory in question will be created in his
 # or her home directory that will be removed again after finishing the task.
 # Note: If LDAP is used, the users' home dirs will instead be read from LDAP
-dir_Users=../../../resources/userdata/
+dir_Users=../../../../src/test/resources/users/
 #dir_Users=/home/
 # Absolute path to a folder the application can temporarily create files in,
 # terminated by a directory separator ("/").
