Change everything what was wanted in the code review

--- a/Kitodo-ImageManagementModule/pom.xml
+++ b/Kitodo-ImageManagementModule/pom.xml
@@ -21,7 +21,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <name>Kitodo − Image Management Module</name>
+    <name>Kitodo - Image Management Module</name>
     <artifactId>kitodo-ImageManagementModule</artifactId>
 
     <dependencies>
