Add active flag to template

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -586,6 +586,9 @@
                 "ruleset": {
                     "type": "long"
                 },
+                "active": {
+                    "type": "boolean"
+                },
                 "sortHelperStatus": {
                     "type": "text",
                     "fields": {
